# mozaic-forecasting

./: README.md  pyproject.toml  pytest.ini
docs/: architecture.md
mozaic/: __init__.py  _index.md  core.py  holiday_smart.py  holidays.py  models.py  plotting.py  tile.py  tile_set.py  utils.py
tests/: test_holiday_smart.prompt.md  test_holiday_smart.py
