[project]
name = "mozaic"
version = "0.1.0"
description = "Forecasting across scales with coherently reconciled components."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "holidays==0.76",
    "numpy==2.2.6",
    "pandas==2.3.1",
    "plotly==6.2.0",
    "prophet==1.2.1",
    "python-dateutil==2.9.0.post0",
    "scipy==1.15.3",
    "tzdata==2025.2",
]
